--- a/SkyrimSoulsRE.vcxproj
+++ b/SkyrimSoulsRE.vcxproj
@@ -15,7 +15,7 @@
     <ProjectGuid>{96B487ED-A8E0-43D0-8F88-EC4F3C24E61D}</ProjectGuid>
     <RootNamespace>SkyrimSoulsRE</RootNamespace>
     <Keyword>Win32Proj</Keyword>
-    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
     <VcpkgTriplet Condition="'$(Platform)'=='x64'">x64-windows-static-md</VcpkgTriplet>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -24,11 +24,13 @@
     <PlatformToolset>v142</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
     <WholeProgramOptimization>true</WholeProgramOptimization>
+    <PreferredToolArchitecture>x64</PreferredToolArchitecture>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <PlatformToolset>v142</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
+    <PreferredToolArchitecture>x64</PreferredToolArchitecture>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -54,8 +56,8 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>$(SolutionDir);$(SolutionDir)..;$(ProjectDir)include;$(SolutionDir)CommonLibSSE\include;$(SolutionDir)SimpleIni;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;PLUGIN_EXAMPLE_EXPORTS;SPDLOG_COMPILED_LIB;SKSE_SUPPORT_XBYAK;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>$(SolutionDir);$(SolutionDir)..;$(ProjectDir)include;$(SolutionDir)CommonLibSSE\include;$(SolutionDir)SimpleIni;$(SolutionDir)CommonLibSSE\build\vcpkg_installed\x64-windows-static-md\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>WIN32;_WINDOWS;_DEBUG;_USRDLL;PLUGIN_EXAMPLE_EXPORTS;SPDLOG_COMPILED_LIB;SKSE_SUPPORT_XBYAK;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <PrecompiledHeader>
@@ -68,12 +70,14 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <ControlFlowGuard>Guard</ControlFlowGuard>
       <FloatingPointExceptions>true</FloatingPointExceptions>
-      <CompileAs>CompileAsCpp</CompileAs>
+      <CompileAs>Default</CompileAs>
       <EnforceTypeConversionRules>true</EnforceTypeConversionRules>
       <LanguageStandard>stdcpplatest</LanguageStandard>
       <UseFullPaths>false</UseFullPaths>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <DisableSpecificWarnings>4061;4200;4265;4266;4371;4514;4582;4583;4623;4625;4626;4710;4711;4820;5026;5027;5045;5053;5204;5220</DisableSpecificWarnings>
+      <RuntimeTypeInfo>true</RuntimeTypeInfo>
+      <TreatSpecificWarningsAsErrors>4715</TreatSpecificWarningsAsErrors>
     </ClCompile>
     <Link>
       <ModuleDefinitionFile>exports.def</ModuleDefinitionFile>
@@ -102,8 +106,8 @@
     <ClCompile>
       <Optimization>MaxSpeed</Optimization>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <AdditionalIncludeDirectories>$(SolutionDir);$(SolutionDir)..;$(ProjectDir)include;$(SolutionDir)CommonLibSSE\include;$(SolutionDir)SimpleIni;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;PLUGIN_EXAMPLE_EXPORTS;SPDLOG_COMPILED_LIB;SKSE_SUPPORT_XBYAK;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>$(SolutionDir);$(SolutionDir)..;$(ProjectDir)include;$(SolutionDir)CommonLibSSE\include;$(SolutionDir)SimpleIni;$(SolutionDir)CommonLibSSE\build\vcpkg_installed\x64-windows-static-md\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>WIN32;_WINDOWS;NDEBUG;_WINDOWS;_USRDLL;PLUGIN_EXAMPLE_EXPORTS;SPDLOG_COMPILED_LIB;SKSE_SUPPORT_XBYAK;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <PrecompiledHeader>
@@ -115,11 +119,13 @@
       <OmitFramePointers>
       </OmitFramePointers>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
-      <CompileAs>CompileAsCpp</CompileAs>
+      <CompileAs>Default</CompileAs>
       <LanguageStandard>stdcpplatest</LanguageStandard>
       <EnforceTypeConversionRules>true</EnforceTypeConversionRules>
       <UseFullPaths>false</UseFullPaths>
       <DisableSpecificWarnings>4061;4200;4265;4266;4371;4514;4582;4583;4623;4625;4626;4710;4711;4820;5026;5027;5045;5053;5204;5220</DisableSpecificWarnings>
+      <RuntimeTypeInfo>true</RuntimeTypeInfo>
+      <TreatSpecificWarningsAsErrors>4715</TreatSpecificWarningsAsErrors>
     </ClCompile>
     <Link>
       <ModuleDefinitionFile>exports.def</ModuleDefinitionFile>
@@ -154,31 +160,31 @@
     <ClCompile Include="src\Controls\PlayerControlsEx.cpp" />
     <ClCompile Include="src\ItemMenuUpdater.cpp" />
     <ClCompile Include="src\Menus\CombatAlertOverlayMenu.cpp" />
-    <ClCompile Include="src\Menus\Hooks_BarterMenu.cpp" />
-    <ClCompile Include="src\Menus\Hooks_BookMenu.cpp" />
-    <ClCompile Include="src\Menus\Hooks_Console.cpp" />
-    <ClCompile Include="src\Menus\Hooks_ContainerMenu.cpp" />
-    <ClCompile Include="src\Menus\Hooks_CustomMenu.cpp" />
-    <ClCompile Include="src\Menus\Hooks_DialogueMenu.cpp" />
-    <ClCompile Include="src\Menus\Hooks_FavoritesMenu.cpp" />
-    <ClCompile Include="src\Menus\Hooks_GiftMenu.cpp" />
-    <ClCompile Include="src\Menus\Hooks_HUDMenu.cpp" />
-    <ClCompile Include="src\Menus\Hooks_InventoryMenu.cpp" />
-    <ClCompile Include="src\Menus\Hooks_JournalMenu.cpp" />
-    <ClCompile Include="src\Menus\Hooks_LevelUpMenu.cpp" />
-    <ClCompile Include="src\Menus\Hooks_LockpickingMenu.cpp" />
-    <ClCompile Include="src\Menus\Hooks_MagicMenu.cpp" />
-    <ClCompile Include="src\Menus\Hooks_MapMenu.cpp" />
-    <ClCompile Include="src\Menus\Hooks_MessageBoxMenu.cpp" />
-    <ClCompile Include="src\Menus\Hooks_ModManagerMenu.cpp" />
-    <ClCompile Include="src\Menus\Hooks_SleepWaitMenu.cpp" />
-    <ClCompile Include="src\Menus\Hooks_StatsMenu.cpp" />
-    <ClCompile Include="src\Menus\Hooks_TrainingMenu.cpp" />
-    <ClCompile Include="src\Menus\Hooks_TutorialMenu.cpp" />
-    <ClCompile Include="src\Menus\Hooks_TweenMenu.cpp" />
+    <ClCompile Include="src\Menus\BarterMenuEx.cpp" />
+    <ClCompile Include="src\Menus\BookMenuEx.cpp" />
+    <ClCompile Include="src\Menus\ConsoleEx.cpp" />
+    <ClCompile Include="src\Menus\ContainerMenuEx.cpp" />
+    <ClCompile Include="src\Menus\CustomMenuEx.cpp" />
+    <ClCompile Include="src\Menus\DialogueMenuEx.cpp" />
+    <ClCompile Include="src\Menus\FavoritesMenuEx.cpp" />
+    <ClCompile Include="src\Menus\GiftMenuEx.cpp" />
+    <ClCompile Include="src\Menus\HUDMenuEx.cpp" />
+    <ClCompile Include="src\Menus\InventoryMenuEx.cpp" />
+    <ClCompile Include="src\Menus\JournalMenuEx.cpp" />
+    <ClCompile Include="src\Menus\LevelUpMenuEx.cpp" />
+    <ClCompile Include="src\Menus\LockpickingMenuEx.cpp" />
+    <ClCompile Include="src\Menus\MagicMenuEx.cpp" />
+    <ClCompile Include="src\Menus\MapMenuEx.cpp" />
+    <ClCompile Include="src\Menus\MessageBoxMenuEx.cpp" />
+    <ClCompile Include="src\Menus\ModManagerMenuEx.cpp" />
+    <ClCompile Include="src\Menus\SleepWaitMenuEx.cpp" />
+    <ClCompile Include="src\Menus\StatsMenuEx.cpp" />
+    <ClCompile Include="src\Menus\TrainingMenuEx.cpp" />
+    <ClCompile Include="src\Menus\TutorialMenuEx.cpp" />
+    <ClCompile Include="src\Menus\TweenMenuEx.cpp" />
     <ClCompile Include="src\AutoCloseManager.cpp" />
     <ClCompile Include="src\SkyrimSoulsRE.cpp" />
-    <ClCompile Include="src\PayprusHook.cpp" />
+    <ClCompile Include="src\PapyrusHook.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\SlowMotionHandler.cpp" />
     <ClCompile Include="src\Settings.cpp" />
@@ -194,34 +200,34 @@
     <ClInclude Include="include\Controls\PlayerControlsEx.h" />
     <ClInclude Include="include\ItemMenuUpdater.h" />
     <ClInclude Include="include\Menus\CombatAlertOverlayMenu.h" />
-    <ClInclude Include="include\Menus\Hooks_LevelUpMenu.h" />
-    <ClInclude Include="include\Menus\Hooks_MapMenu.h" />
-    <ClInclude Include="include\Menus\Hooks_StatsMenu.h" />
+    <ClInclude Include="include\Menus\LevelUpMenuEx.h" />
+    <ClInclude Include="include\Menus\MapMenuEx.h" />
+    <ClInclude Include="include\Menus\StatsMenuEx.h" />
     <ClInclude Include="include\SlowMotionHandler.h" />
     <ClInclude Include="include\AutoCloseManager.h" />
     <ClInclude Include="include\PCH.h" />
     <ClInclude Include="include\SkyrimSoulsRE.h" />
-    <ClInclude Include="include\Menus\Hooks_BarterMenu.h" />
-    <ClInclude Include="include\Menus\Hooks_BookMenu.h" />
-    <ClInclude Include="include\Menus\Hooks_Console.h" />
-    <ClInclude Include="include\Menus\Hooks_ContainerMenu.h" />
-    <ClInclude Include="include\Menus\Hooks_CustomMenu.h" />
-    <ClInclude Include="include\Menus\Hooks_DialogueMenu.h" />
-    <ClInclude Include="include\Menus\Hooks_FavoritesMenu.h" />
-    <ClInclude Include="include\Menus\Hooks_GiftMenu.h" />
-    <ClInclude Include="include\Menus\Hooks_HUDMenu.h" />
-    <ClInclude Include="include\Menus\Hooks_InventoryMenu.h" />
-    <ClInclude Include="include\Menus\Hooks_JournalMenu.h" />
-    <ClInclude Include="include\Menus\Hooks_LockpickingMenu.h" />
-    <ClInclude Include="include\Menus\Hooks_MessageBoxMenu.h" />
-    <ClInclude Include="include\Menus\Hooks_ModManagerMenu.h" />
+    <ClInclude Include="include\Menus\BarterMenuEx.h" />
+    <ClInclude Include="include\Menus\BookMenuEx.h" />
+    <ClInclude Include="include\Menus\ConsoleEx.h" />
+    <ClInclude Include="include\Menus\ContainerMenuEx.h" />
+    <ClInclude Include="include\Menus\CustomMenuEx.h" />
+    <ClInclude Include="include\Menus\DialogueMenuEx.h" />
+    <ClInclude Include="include\Menus\FavoritesMenuEx.h" />
+    <ClInclude Include="include\Menus\GiftMenuEx.h" />
+    <ClInclude Include="include\Menus\HUDMenuEx.h" />
+    <ClInclude Include="include\Menus\InventoryMenuEx.h" />
+    <ClInclude Include="include\Menus\JournalMenuEx.h" />
+    <ClInclude Include="include\Menus\LockpickingMenuEx.h" />
+    <ClInclude Include="include\Menus\MessageBoxMenuEx.h" />
+    <ClInclude Include="include\Menus\ModManagerMenuEx.h" />
     <ClInclude Include="include\PapyrusHook.h" />
-    <ClInclude Include="include\Menus\Hooks_SleepWaitMenu.h" />
-    <ClInclude Include="include\Menus\Hooks_MagicMenu.h" />
-    <ClInclude Include="include\Menus\Hooks_TrainingMenu.h" />
-    <ClInclude Include="include\Menus\Hooks_TutorialMenu.h" />
+    <ClInclude Include="include\Menus\SleepWaitMenuEx.h" />
+    <ClInclude Include="include\Menus\MagicMenuEx.h" />
+    <ClInclude Include="include\Menus\TrainingMenuEx.h" />
+    <ClInclude Include="include\Menus\TutorialMenuEx.h" />
     <ClInclude Include="include\Settings.h" />
-    <ClInclude Include="include\Menus\Hooks_TweenMenu.h" />
+    <ClInclude Include="include\Menus\TweenMenuEx.h" />
     <ClInclude Include="include\UnpausedTaskQueue.h" />
     <ClInclude Include="include\version.h" />
     <ClInclude Include="include\Offsets.h" />
